ffigen/LabSoundHelper.h

#define AudioContext void
typedef struct AudioStreamConfig {
    int32_t device_index;
    uint32_t desired_channels;
    float desired_samplerate;
} AudioStreamConfig;
typedef struct AudioDeviceIndex
{
    uint32_t index;
    int valid;
} AudioDeviceIndex;
AudioDeviceInfoList labSound_MakeAudioDeviceList();
AudioDeviceIndex labSound_GetDefaultOutputAudioDeviceIndex();
AudioDeviceIndex labSound_GetDefaultInputAudioDeviceIndex();
int labSound_MakeAudioHardwareInputNode(AudioContext* context);
AudioStreamConfig labSound_GetDefaultInputAudioDeviceConfiguration();
AudioStreamConfig labSound_GetDefaultOutputAudioDeviceConfiguration();
////////////
/// PORT ///
////////////

intptr_t InitDartApiDL(void* data);
void registerDecodeAudioSendPort(int sendPort);
void registerAudioSampleOnEndedSendPort(int sendPort);
void registerOfflineRenderCompleteSendPort(int sendPort);
////////////////////
/// AudioContext ///
////////////////////

AudioContext* createRealtimeAudioContext(AudioStreamConfig outputConfig, AudioStreamConfig inputConfig);