lib/src/generated_bindings.dart


  late final __strset_ptr = _lookup<ffi.NativeFunction<_c__strset>>('_strset');
  late final _dart__strset __strset = __strset_ptr.asFunction<_dart__strset>();

  int strspn(
    ffi.Pointer<ffi.Int8> _Str,
    ffi.Pointer<ffi.Int8> _Control,
  ) {
    return _strspn(
      _Str,
      _Control,
    );
  }

  late final _strspn_ptr = _lookup<ffi.NativeFunction<_c_strspn>>('strspn');
  late final _dart_strspn _strspn = _strspn_ptr.asFunction<_dart_strspn>();

  ffi.Pointer<ffi.Int8> strtok(
    ffi.Pointer<ffi.Int8> _String,
    ffi.Pointer<ffi.Int8> _Delimiter,
  ) {
    return _strtok(
      _String,
      _Delimiter,
    );
  }

  late final _strtok_ptr = _lookup<ffi.NativeFunction<_c_strtok>>('strtok');
  late final _dart_strtok _strtok = _strtok_ptr.asFunction<_dart_strtok>();

  int _strupr_s(
    ffi.Pointer<ffi.Int8> _String,
    int _Size,
  ) {
    return __strupr_s(
      _String,
      _Size,
    );
  }

  late final __strupr_s_ptr =
      _lookup<ffi.NativeFunction<_c__strupr_s>>('_strupr_s');
  late final _dart__strupr_s __strupr_s =
      __strupr_s_ptr.asFunction<_dart__strupr_s>();

  ffi.Pointer<ffi.Int8> _strupr(
    ffi.Pointer<ffi.Int8> _String,
  ) {
    return __strupr(
      _String,
    );
  }

  late final __strupr_ptr = _lookup<ffi.NativeFunction<_c__strupr>>('_strupr');
  late final _dart__strupr __strupr = __strupr_ptr.asFunction<_dart__strupr>();

  int _strupr_s_l(
    ffi.Pointer<ffi.Int8> _String,
    int _Size,
    ffi.Pointer<__crt_locale_pointers> _Locale,
  ) {
    return __strupr_s_l(
      _String,
      _Size,
      _Locale,
    );
  }

  late final __strupr_s_l_ptr =
      _lookup<ffi.NativeFunction<_c__strupr_s_l>>('_strupr_s_l');
  late final _dart__strupr_s_l __strupr_s_l =
      __strupr_s_l_ptr.asFunction<_dart__strupr_s_l>();

  ffi.Pointer<ffi.Int8> _strupr_l(
    ffi.Pointer<ffi.Int8> _String,
    ffi.Pointer<__crt_locale_pointers> _Locale,
  ) {
    return __strupr_l(
      _String,
      _Locale,
    );
  }

  late final __strupr_l_ptr =
      _lookup<ffi.NativeFunction<_c__strupr_l>>('_strupr_l');
  late final _dart__strupr_l __strupr_l =
      __strupr_l_ptr.asFunction<_dart__strupr_l>();

  int strxfrm(
    ffi.Pointer<ffi.Int8> _Destination,
    ffi.Pointer<ffi.Int8> _Source,
    int _MaxCount,
  ) {
    return _strxfrm(
      _Destination,
      _Source,
      _MaxCount,
    );
  }

  late final _strxfrm_ptr = _lookup<ffi.NativeFunction<_c_strxfrm>>('strxfrm');
  late final _dart_strxfrm _strxfrm = _strxfrm_ptr.asFunction<_dart_strxfrm>();

  int _strxfrm_l(
    ffi.Pointer<ffi.Int8> _Destination,
    ffi.Pointer<ffi.Int8> _Source,
    int _MaxCount,
    ffi.Pointer<__crt_locale_pointers> _Locale,
  ) {
    return __strxfrm_l(
      _Destination,
      _Source,
      _MaxCount,
      _Locale,
    );
  }

  late final __strxfrm_l_ptr =
      _lookup<ffi.NativeFunction<_c__strxfrm_l>>('_strxfrm_l');
  late final _dart__strxfrm_l __strxfrm_l =
      __strxfrm_l_ptr.asFunction<_dart__strxfrm_l>();

  ffi.Pointer<ffi.Int8> strdup(
    ffi.Pointer<ffi.Int8> _String,
  ) {
    return _strdup_1(
      _String,
    );
  }

  late final _strdup_ptr = _lookup<ffi.NativeFunction<_c_strdup>>('strdup');
  late final _dart_strdup _strdup_1 = _strdup_ptr.asFunction<_dart_strdup>();

  int strcmpi(
    ffi.Pointer<ffi.Int8> _String1,
    ffi.Pointer<ffi.Int8> _String2,
  ) {
    return _strcmpi_1(
      _String1,
      _String2,
    );
  }

  late final _strcmpi_ptr = _lookup<ffi.NativeFunction<_c_strcmpi>>('strcmpi');
  late final _dart_strcmpi _strcmpi_1 =
      _strcmpi_ptr.asFunction<_dart_strcmpi>();

  int stricmp(
    ffi.Pointer<ffi.Int8> _String1,
    ffi.Pointer<ffi.Int8> _String2,
  ) {
    return _stricmp_1(
      _String1,
      _String2,
    );
  }

  late final _stricmp_ptr = _lookup<ffi.NativeFunction<_c_stricmp>>('stricmp');
  late final _dart_stricmp _stricmp_1 =
      _stricmp_ptr.asFunction<_dart_stricmp>();

  ffi.Pointer<ffi.Int8> strlwr(
    ffi.Pointer<ffi.Int8> _String,
  ) {
    return _strlwr_1(
      _String,
    );
  }

  late final _strlwr_ptr = _lookup<ffi.NativeFunction<_c_strlwr>>('strlwr');
  late final _dart_strlwr _strlwr_1 = _strlwr_ptr.asFunction<_dart_strlwr>();

  int strnicmp(
    ffi.Pointer<ffi.Int8> _String1,
    ffi.Pointer<ffi.Int8> _String2,
    int _MaxCount,
  ) {
    return _strnicmp_1(
      _String1,
      _String2,
      _MaxCount,
    );
  }

  late final _strnicmp_ptr =
      _lookup<ffi.NativeFunction<_c_strnicmp>>('strnicmp');
  late final _dart_strnicmp _strnicmp_1 =
      _strnicmp_ptr.asFunction<_dart_strnicmp>();

  ffi.Pointer<ffi.Int8> strnset(
    ffi.Pointer<ffi.Int8> _String,
    int _Value,
    int _MaxCount,
  ) {
    return _strnset_1(
      _String,
      _Value,
      _MaxCount,
    );
  }

  late final _strnset_ptr = _lookup<ffi.NativeFunction<_c_strnset>>('strnset');
  late final _dart_strnset _strnset_1 =
      _strnset_ptr.asFunction<_dart_strnset>();

  ffi.Pointer<ffi.Int8> strrev(
    ffi.Pointer<ffi.Int8> _String,
  ) {
    return _strrev_1(
      _String,
    );
  }

  late final _strrev_ptr = _lookup<ffi.NativeFunction<_c_strrev>>('strrev');
  late final _dart_strrev _strrev_1 = _strrev_ptr.asFunction<_dart_strrev>();

  ffi.Pointer<ffi.Int8> strset(
    ffi.Pointer<ffi.Int8> _String,
    int _Value,
  ) {
    return _strset_1(
      _String,
      _Value,
    );
  }

  late final _strset_ptr = _lookup<ffi.NativeFunction<_c_strset>>('strset');
  late final _dart_strset _strset_1 = _strset_ptr.asFunction<_dart_strset>();

  ffi.Pointer<ffi.Int8> strupr(
    ffi.Pointer<ffi.Int8> _String,
  ) {
    return _strupr_1(
      _String,
    );
  }

  late final _strupr_ptr = _lookup<ffi.NativeFunction<_c_strupr>>('strupr');
  late final _dart_strupr _strupr_1 = _strupr_ptr.asFunction<_dart_strupr>();

  AudioDeviceInfoList labSound_MakeAudioDeviceList() {
    return _labSound_MakeAudioDeviceList();
  }

  late final _labSound_MakeAudioDeviceList_ptr =
      _lookup<ffi.NativeFunction<_c_labSound_MakeAudioDeviceList>>(
          'labSound_MakeAudioDeviceList');
  late final _dart_labSound_MakeAudioDeviceList _labSound_MakeAudioDeviceList =
      _labSound_MakeAudioDeviceList_ptr
          .asFunction<_dart_labSound_MakeAudioDeviceList>();

  AudioDeviceIndex labSound_GetDefaultOutputAudioDeviceIndex() {
    return _labSound_GetDefaultOutputAudioDeviceIndex();
  }

  late final _labSound_GetDefaultOutputAudioDeviceIndex_ptr =
      _lookup<ffi.NativeFunction<_c_labSound_GetDefaultOutputAudioDeviceIndex>>(
          'labSound_GetDefaultOutputAudioDeviceIndex');
  late final _dart_labSound_GetDefaultOutputAudioDeviceIndex
      _labSound_GetDefaultOutputAudioDeviceIndex =
      _labSound_GetDefaultOutputAudioDeviceIndex_ptr
          .asFunction<_dart_labSound_GetDefaultOutputAudioDeviceIndex>();

  AudioDeviceIndex labSound_GetDefaultInputAudioDeviceIndex() {
    return _labSound_GetDefaultInputAudioDeviceIndex();
  }

  late final _labSound_GetDefaultInputAudioDeviceIndex_ptr =
      _lookup<ffi.NativeFunction<_c_labSound_GetDefaultInputAudioDeviceIndex>>(
          'labSound_GetDefaultInputAudioDeviceIndex');
  late final _dart_labSound_GetDefaultInputAudioDeviceIndex
      _labSound_GetDefaultInputAudioDeviceIndex =
      _labSound_GetDefaultInputAudioDeviceIndex_ptr
          .asFunction<_dart_labSound_GetDefaultInputAudioDeviceIndex>();

  int labSound_MakeAudioHardwareInputNode(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _labSound_MakeAudioHardwareInputNode(
      context,
    );
  }

  late final _labSound_MakeAudioHardwareInputNode_ptr =
      _lookup<ffi.NativeFunction<_c_labSound_MakeAudioHardwareInputNode>>(
          'labSound_MakeAudioHardwareInputNode');
  late final _dart_labSound_MakeAudioHardwareInputNode
      _labSound_MakeAudioHardwareInputNode =
      _labSound_MakeAudioHardwareInputNode_ptr
          .asFunction<_dart_labSound_MakeAudioHardwareInputNode>();

  AudioStreamConfig labSound_GetDefaultInputAudioDeviceConfiguration() {
    return _labSound_GetDefaultInputAudioDeviceConfiguration();
  }

  late final _labSound_GetDefaultInputAudioDeviceConfiguration_ptr = _lookup<
          ffi.NativeFunction<
              _c_labSound_GetDefaultInputAudioDeviceConfiguration>>(
      'labSound_GetDefaultInputAudioDeviceConfiguration');
  late final _dart_labSound_GetDefaultInputAudioDeviceConfiguration
      _labSound_GetDefaultInputAudioDeviceConfiguration =
      _labSound_GetDefaultInputAudioDeviceConfiguration_ptr
          .asFunction<_dart_labSound_GetDefaultInputAudioDeviceConfiguration>();

  AudioStreamConfig labSound_GetDefaultOutputAudioDeviceConfiguration() {
    return _labSound_GetDefaultOutputAudioDeviceConfiguration();
  }

  late final _labSound_GetDefaultOutputAudioDeviceConfiguration_ptr = _lookup<
          ffi.NativeFunction<
              _c_labSound_GetDefaultOutputAudioDeviceConfiguration>>(
      'labSound_GetDefaultOutputAudioDeviceConfiguration');
  late final _dart_labSound_GetDefaultOutputAudioDeviceConfiguration
      _labSound_GetDefaultOutputAudioDeviceConfiguration =
      _labSound_GetDefaultOutputAudioDeviceConfiguration_ptr.asFunction<
          _dart_labSound_GetDefaultOutputAudioDeviceConfiguration>();

  /// /////////
  /// PORT ///
  /// /////////
  int InitDartApiDL(
    ffi.Pointer<ffi.Void> data,
  ) {
    return _InitDartApiDL(
      data,
    );
  }

  late final _InitDartApiDL_ptr =
      _lookup<ffi.NativeFunction<_c_InitDartApiDL>>('InitDartApiDL');
  late final _dart_InitDartApiDL _InitDartApiDL =
      _InitDartApiDL_ptr.asFunction<_dart_InitDartApiDL>();

  void registerDecodeAudioSendPort(
    int sendPort,
  ) {
    return _registerDecodeAudioSendPort(
      sendPort,
    );
  }

  late final _registerDecodeAudioSendPort_ptr =
      _lookup<ffi.NativeFunction<_c_registerDecodeAudioSendPort>>(
          'registerDecodeAudioSendPort');
  late final _dart_registerDecodeAudioSendPort _registerDecodeAudioSendPort =
      _registerDecodeAudioSendPort_ptr
          .asFunction<_dart_registerDecodeAudioSendPort>();

  void registerAudioSampleOnEndedSendPort(
    int sendPort,
  ) {
    return _registerAudioSampleOnEndedSendPort(
      sendPort,
    );
  }

  late final _registerAudioSampleOnEndedSendPort_ptr =
      _lookup<ffi.NativeFunction<_c_registerAudioSampleOnEndedSendPort>>(
          'registerAudioSampleOnEndedSendPort');
  late final _dart_registerAudioSampleOnEndedSendPort
      _registerAudioSampleOnEndedSendPort =
      _registerAudioSampleOnEndedSendPort_ptr
          .asFunction<_dart_registerAudioSampleOnEndedSendPort>();

  void registerOfflineRenderCompleteSendPort(
    int sendPort,
  ) {
    return _registerOfflineRenderCompleteSendPort(
      sendPort,
    );
  }

  late final _registerOfflineRenderCompleteSendPort_ptr =
      _lookup<ffi.NativeFunction<_c_registerOfflineRenderCompleteSendPort>>(
          'registerOfflineRenderCompleteSendPort');
  late final _dart_registerOfflineRenderCompleteSendPort
      _registerOfflineRenderCompleteSendPort =
      _registerOfflineRenderCompleteSendPort_ptr
          .asFunction<_dart_registerOfflineRenderCompleteSendPort>();

  /// /////////////////
  /// AudioContext ///
  /// /////////////////
  ffi.Pointer<ffi.Void> createRealtimeAudioContext(
    AudioStreamConfig outputConfig,
    AudioStreamConfig inputConfig,
  ) {
    return _createRealtimeAudioContext(
      outputConfig,
      inputConfig,
    );
  }

  late final _createRealtimeAudioContext_ptr =
      _lookup<ffi.NativeFunction<_c_createRealtimeAudioContext>>(
          'createRealtimeAudioContext');
  late final _dart_createRealtimeAudioContext _createRealtimeAudioContext =
      _createRealtimeAudioContext_ptr
          .asFunction<_dart_createRealtimeAudioContext>();
